kubernetes/nexus-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: nexus
  name: nexus
spec:
  replicas: 1
  serviceName: nexus
  selector:
    matchLabels:
      app: nexus
  template:
    metadata:
      labels:
        app: nexus
    spec:
      containers:
        - name: nexus
          image: "quay.io/travelaudience/docker-nexus:3.14.0"
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 250m
              # Based on https://support.sonatype.com/hc/en-us/articles/115006448847#mem
              # and https://twitter.com/analytically/status/894592422382063616:
              #   Xms == Xmx
              #   Xmx <= 4G
              #   MaxDirectMemory >= 2G
              #   Xmx + MaxDirectMemory <= RAM * 2/3 (hence the request for 4800Mi)
              #   MaxRAMFraction=1 is not being set as it would allow the heap
              #     to use all the available memory.
              memory: 4800Mi
          ports:
            - containerPort: 5003
              name: nexus-docker-g
            - containerPort: 8081
              name: nexus-http
          volumeMounts:
            - mountPath: /nexus-data
              name: nexus-data
            - mountPath: /nexus-data/backup
              name: nexus-data-backup
        - name: nexus-proxy
          image: "quay.io/travelaudience/docker-nexus-proxy:2.4.0"
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: nexus-proxy
        - name: nexus-backup
          image: "quay.io/travelaudience/docker-nexus-backup:1.4.0"
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: /nexus-data
              name: nexus-data
            - mountPath: /nexus-data/backup
              name: nexus-data-backup
      terminationGracePeriodSeconds: 10
  volumeClaimTemplates:
    - metadata:
        name: nexus-data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1024Gi
        storageClassName: standard
    - metadata:
        name: nexus-data-backup
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 32Gi
        storageClassName: standard
