kubernetes/nexus-http-svc.yaml
apiVersion: v1
kind: Service
metadata: 
  name: nexus-http
spec: 
  ports: 
    - name: nexus-http
      nodePort: 30013
      port: 8081
      protocol: TCP
      targetPort: 8081
  selector: 
    app: nexus
  type: NodePort
